# Pautotest

PAutoTest/: AutoTest.xlsm  README.txt  Template_all_bk.xlsm  Template_bk.xlsm  report.xml  run.sh  setup.sh
PAutoTest/project/ExeclToXml/: ExeclToXml.cpp  ExeclToXml.h
PAutoTest/project/GenTestConfig/: GenTestConfig.cpp  GenTestConfig.h
PAutoTest/script/execlToXml/: pyTra.py
PAutoTest/script/parseReport/: ReportToExecl.py
PAutoTest/script/testConfig/: pyTestConfig.py
PAutoTest/src/: CMakeLists.txt  src.pro
PAutoTest/src/autotestserver/: main.cc
PAutoTest/src/autotestserver/alsa_audio/: CM_Sample.txt  CMakeLists.txt  alsa_audio.pro  audio_input.h  audio_input_alsa.cc  audio_output_alsa.cc  audio_output_alsa.h  main.cc
PAutoTest/src/autotestserver/audio_recog/: Audio_Recog (复件).cpp  Audio_Recog (复件).h  Audio_Recog.cpp  Audio_Recog.h  CMakeLists.txt  RecordButton_Define.h  WavFile.cpp  WavFile.h  audio_process.cpp  audio_process.h  fingerprint.cpp  fingerprint.h  hash.cpp  hash.h  recog.cpp  recog.h  vad.cpp  vad.h  wav.cpp  wav.h
PAutoTest/src/autotestserver/pic_recog/: CMakeLists.txt  ExtractImageFromVideo.cpp  ExtractImageFromVideo.h  ExtractPointsFromImage.cpp  ExtractPointsFromImage.h  ImageRecogInfo.cpp  ImageRecogInfo.h  PicRecogProcess.cpp  PicRecogProcess.h  RecogCharWithOCR.cpp  RecogCharWithOCR.h  RectifyImages.cpp  RectifyImages.h
PAutoTest/src/autotestserver/testor/: Action.cpp  Action.h  ActionComparePrompt.cpp  ActionComparePrompt.h  ActionDelayed.cpp  ActionDelayed.h  ActionJudgeBeep.cpp  ActionJudgeBeep.h  ActionJudgeBeepBeep.cpp  ActionJudgeBeepBeep.h  ActionJudgeBeepPrompt.cpp  ActionJudgeBeepPrompt.h  ActionJudgeBeepPromptBeep.cpp  ActionJudgeBeepPromptBeep.h  ActionJudgeEmptyRecordFile.cpp  ActionJudgeEmptyRecordFile.h  ActionJudgePromptBeep.cpp  ActionJudgePromptBeep.h  ActionJudgeTTSAndViewParallel.cpp  ActionJudgeTTSAndViewParallel.h  ActionJudgeVrView.cpp  ActionJudgeVrView.h  ActionPlaying.cpp  ActionPlaying.h  ActionVrControl.cpp  ActionVrControl.h  CMakeLists.txt  ConfigAna.cpp  ConfigAna.h  Controler.cpp  Controler.h  ExeclToXml.cpp  ExeclToXml.h  GenTestConfig.cpp  GenTestConfig.h  GetBeepLen.cpp  GetBeepLen.h  LOG.cpp  LOG.h  SocketServer.cpp  (+9 more)
PAutoTest/src/autotestserver/testor/socket/: Makefile  client.cpp  server.cpp  sockcomm.h
PAutoTest/src/contribute/pugixml/scripts/: CMakeLists.txt
PAutoTest/src/contribute/vad/: webrtc_vad.h
PAutoTest/testFile/: Template.xlsm  Template_L1.xlsm  config17.txt  out.xml  testConfig.xml
PAutoTest/testFile/L1/UC/: Template-L1-2.xlsm  Template-L1.xlsm
PAutoTest/testFile/L1/UC/CallHistory/: CallHistory_20180710163357.csv
PAutoTest/testFile/L1/UC/audiofile/audio in/: 1.pcm  Blanblahblan.pcm  Call87.7.pcm  CallJohnSmith.pcm  Concierge_on.pcm  LaunchingYelp.pcm  ListmyApps.pcm  LunchApps.pcm  MoreHints.pcm  Preset11.pcm  Show_concierge.pcm  SorryIMissThat.pcm  TSLStationsList.pcm  Yelp.pcm  YelpPOIListTTS.pcm  YepInit.pcm  askforcallNum.pcm  browseArtistTheBeatles.pcm  browseAudioBooks.pcm  browseComposerWhite.pcm  browsePlaylistTest.pcm  call555-1717.pcm  callonetwothree.pcm  changeToAM.pcm  changeToBluetoothAudio.pcm  changeToCD.pcm  changeToFM.pcm  changeToUSB.pcm  changeToUSB2.pcm  decrease_fan.pcm  help.pcm  helpmewithphonefeatures.pcm  increase_fan.pcm  listenToTheRadio.pcm  listthemessages.pcm  lower_temper.pcm  playAllStation.pcm  playArtistTheBeatles.pcm  playComposerWhite.pcm  playSongAllIKnow.pcm  (+43 more)
PAutoTest/testFile/L1/UC/contacts/: Readme.txt
PAutoTest/testFile/NA_testFile/audioFile/play_audio/: audio.pcm  audioHelp.pcm  back.pcm  cancel.pcm  changeSourceToFM.pcm  help.pcm  phoneHelp.pcm  playSong.pcm  redial.pcm  tuneTo1000AM.pcm  tuneTo107.9FM.pcm  tuneToChannel1OnXM.pcm  tuneToPreset1.pcm  tuneToPreset12.pcm  tunetopreset1.pcm
PAutoTest/testFile/T0/UC/: Template-T0-2.xlsm  Template-T0.xlsm
PAutoTest/testFile/T0/UC/audiofile/audio in/: 107.9FM.pcm  530.pcm  BluetoothAudio.pcm  LunchYelp.pcm  LunchiHeartRadio.pcm  Lunchweather.pcm  PhoneDomain.pcm  aPieceOfSky.pcm  browseSong.pcm  call555-1312.pcm  call911.pcm  callabby.pcm  changeToIpod.pcm  changeToIpod2.pcm  dailbynumber.pcm  notunderstandNum.pcm  number1.pcm  numberone.pcm  phone.pcm  playAlbumClubBand.pcm  playAlbumMyHeartWillGoOn.pcm  playAudioBookAPieceOfSky.pcm  playSongGo.pcm  playSongGoHome.pcm  playSongMichealFeaturingJackey.pcm  playSongRespect.pcm  playsong.pcm  playsongHeyMambo.pcm  searchPOIInYep.pcm  showMystatiuons.pcm  showrecentcall.pcm  trainmyvoice.pcm  tuneTo5 3 0AM.pcm  tuneTo877FM.pcm  turnMusicOn.pcm
PAutoTest/testFile/T0/UC/messages/: SMS_20180614173532.csv
PAutoTest/testFile/T1/UC/: Template-T1-2.xlsm  Template-T1.xlsm
PAutoTest/testFile/T1/UC/audiofile/audio in/: APPListTTS.pcm  Rock.pcm  XM.pcm  aDayInTheLife.pcm  back.pcm  browseAlbumClubBand.pcm  browseGenreCountry.pcm  browsePodcastNeverMind.pcm  call(0800)5551312.pcm  call.pcm  cancel.pcm  changeTheAudioSource.pcm  changeToXM.pcm  four.pcm  gotophone.pcm  iHeartRadio.pcm  iHeartRadioInit.pcm  listenToRockOnSatellite.pcm  phonehelp.pcm  playAReligionStation.pcm  playASatelliteStationByGenre.pcm  playAll.pcm  playGenreCountry.pcm  playPlaylistTest.pcm  playPodcastNeverMind.pcm  playSongDon'tGiveUp.pcm  playSongEvenNow.pcm  playSongGetMeOff.pcm  playSongJackey.pcm  playSongMicheal.pcm  playTheSongADayInTheLife.pcm  playTheSongWeWillRockYou.pcm  readmessageone.pcm  sendamessagetojohnsmith.pcm  tuneTo101.7FM.pcm  tuneTo107.9FM.pcm  tuneToAMRadio.pcm  tuneToChannel1OnXM.pcm  tuneToChannel999OnXM.pcm  tuneToFMRadio.pcm  (+6 more)
PAutoTest/testFile/T1/UC/contacts/: Contact_liuzhen.vcf
PAutoTest/testFile/UC/audiofile/audioin/pcm/: 101.7FM.pcm  1710AM.pcm  87.7.pcm  AM.pcm  Can'tYaSee.pcm  FM.pcm  call(1800)5551312.pcm  call0555-1312.pcm  call911.pcm  callJohn.pcm  callback.pcm  callcontact.pcm  calljamie.pcm  callsmith.pcm  pause.pcm  radiohelp.pcm  test10.pcm  test11.pcm  test15.pcm  test16.pcm  test3.pcm  test4.pcm  test5.pcm  test6.pcm  test7.pcm  test8.pcm
PAutoTest/testFile/UC/audiofile/audioout/pcm/: Calling.pcm  Callingback.pcm  beep2.pcm  (+32 more)
